--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1 class="header">Weather Forecast</h1>
-    <div id="search">
-      <input type="text" id="input" placeholder="Find your city" />
-      <button type="submit"><i class="fa fa-search"></i></button>
+    <div class="container">
+      <h1 class="header">Weather Forecast</h1>
+      <div id="search">
+        <input type="text" id="input" placeholder="Find your city" />
+        <button type="submit"><i class="fa fa-search"></i></button>
+      </div>
     </div>
 
     <script src="index.js"></script>
