add weekday classes to input the weather

--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
     <div class="container">
       <h1 class="header">Weather Forecast</h1>
       <div id="search">
-        <input type="text" id="input" placeholder="Find your city" />
+        <input type="text" id="input" autofocus placeholder="Find your city" />
         <button type="submit"><i class="fa fa-search"></i></button>
       </div>
+    </div>
+    <div id="week">
+      <div id="day1" class="weekdays">.</div>
+      <div id="day2" class="weekdays">.</div>
+      <div id="day3" class="weekdays">.</div>
+      <div id="day4" class="weekdays">.</div>
+      <div id="day5" class="weekdays">.</div>
     </div>
 
     <script src="index.js"></script>
