change layout en make container fulle responsive

--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
 
     <title>Weather App</title>
   </head>
@@ -23,34 +17,11 @@
       <h1 class="header">Weather Forecast</h1>
       <div id="search">
         <input type="text" id="input" autofocus placeholder="Find your city" />
-        <button type="submit"><i class="fa fa-search"></i></button>
+        <button type="submit" id="search"><i class="fa fa-search"></i></button>
       </div>
     </div>
-    <div id="week">
-      <div id="day1" class="weekdays">.</div>
-      <div id="day2" class="weekdays">.</div>
-      <div id="day3" class="weekdays">.</div>
-      <div id="day4" class="weekdays">.</div>
-      <div id="day5" class="weekdays">.</div>
-    </div>
 
-    <script src="index.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
+    <script src="index.js"></script>
   </body>
 </html>
