--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <input type="text" id="input" autofocus placeholder="Find your city" />
         <button type="submit" id="search"><i class="fa fa-search"></i></button>
       </div>
+      <div id="result">
+
+      </div>
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
