change url to metric system

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <button type="submit" id="search"><i class="fa fa-search"></i></button>
       </div>
       <div id="result">
-
+        <ul>
+          <li id="current"></li>
+          <li id="min"></li>
+          <li id="max"></li>
+          <li id="humidity"></li>
+        </ul>
       </div>
     </div>
 
