show output of day 0 in HTML

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       </div>
       <div id="result">
         <ul>
-          <li id="current"></li>
-          <li id="min"></li>
-          <li id="max"></li>
-          <li id="humidity"></li>
+          <li id="current">current temp:</li>
+          <li id="min">min temp:</li>
+          <li id="max">max temp:</li>
+          <li id="humidity">humidity:</li>
         </ul>
       </div>
     </div>
