fetch data from 5days

--- a/index.html
+++ b/index.html
@@ -19,8 +19,40 @@
         <input type="text" id="input" autofocus placeholder="Find your city" />
         <button type="submit" id="search"><i class="fa fa-search"></i></button>
       </div>
-      <div id="result">
-        <ul>
+      <div class="result">
+        <ul class="list">
+          <li id="current">current temp:</li>
+          <li id="min">min temp:</li>
+          <li id="max">max temp:</li>
+          <li id="humidity">humidity:</li>
+        </ul>
+      </div>
+      <div class="result">
+        <ul class="list">
+          <li id="current">current temp:</li>
+          <li id="min">min temp:</li>
+          <li id="max">max temp:</li>
+          <li id="humidity">humidity:</li>
+        </ul>
+      </div>
+      <div class="result">
+        <ul class="list">
+          <li id="current">current temp:</li>
+          <li id="min">min temp:</li>
+          <li id="max">max temp:</li>
+          <li id="humidity">humidity:</li>
+        </ul>
+      </div>
+      <div class="result">
+        <ul class="list">
+          <li id="current">current temp:</li>
+          <li id="min">min temp:</li>
+          <li id="max">max temp:</li>
+          <li id="humidity">humidity:</li>
+        </ul>
+      </div>
+      <div class="result">
+        <ul class="list">
           <li id="current">current temp:</li>
           <li id="min">min temp:</li>
           <li id="max">max temp:</li>
