add arrays for the (days divs

--- a/index.html
+++ b/index.html
@@ -21,42 +21,37 @@
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current">current temp:</li>
-          <li id="min">min temp:</li>
-          <li id="max">max temp:</li>
-          <li id="humidity">humidity:</li>
+          <li class="current">current temp:</li>
+          <li class="max">max temp:</li>
+          <li class="humidity">humidity:</li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current">current temp:</li>
-          <li id="min">min temp:</li>
-          <li id="max">max temp:</li>
-          <li id="humidity">humidity:</li>
+          <li class="current">current temp:</li>
+          <li class="max">max temp:</li>
+          <li class="humidity">humidity:</li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current">current temp:</li>
-          <li id="min">min temp:</li>
-          <li id="max">max temp:</li>
-          <li id="humidity">humidity:</li>
+          <li class="current">current temp:</li>
+          <li class="max">max temp:</li>
+          <li class="humidity">humidity:</li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current">current temp:</li>
-          <li id="min">min temp:</li>
-          <li id="max">max temp:</li>
-          <li id="humidity">humidity:</li>
+          <li class="current">current temp:</li>
+          <li class="max">max temp:</li>
+          <li class="humidity">humidity:</li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current">current temp:</li>
-          <li id="min">min temp:</li>
-          <li id="max">max temp:</li>
-          <li id="humidity">humidity:</li>
+          <li class="current">current temp:</li>
+          <li class="max">max temp:</li>
+          <li class="humidity">humidity:</li>
         </ul>
       </div>
     </div>
