change list elements from clas to id (for now).

--- a/index.html
+++ b/index.html
@@ -21,37 +21,37 @@
       </div>
       <div class="result">
         <ul class="list">
-          <li class="current">current temp:</li>
-          <li class="max">max temp:</li>
-          <li class="humidity">humidity:</li>
+          <li id="current1">current temp:</li>
+          <li id="max1">max temp:</li>
+          <li id="humidity1">humidity:</li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li class="current">current temp:</li>
-          <li class="max">max temp:</li>
-          <li class="humidity">humidity:</li>
+          <li id="current2">current temp:</li>
+          <li id="max2">max temp:</li>
+          <li id="humidity2">humidity:</li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li class="current">current temp:</li>
-          <li class="max">max temp:</li>
-          <li class="humidity">humidity:</li>
+          <li id="current3">current temp:</li>
+          <li id="max3">max temp:</li>
+          <li id="humidity3">humidity:</li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li class="current">current temp:</li>
-          <li class="max">max temp:</li>
-          <li class="humidity">humidity:</li>
+          <li id="current4">current temp:</li>
+          <li id="max4">max temp:</li>
+          <li id="humidity4">humidity:</li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li class="current">current temp:</li>
-          <li class="max">max temp:</li>
-          <li class="humidity">humidity:</li>
+          <li id="current5">current temp:</li>
+          <li id="max5">max temp:</li>
+          <li id="humidity5">humidity:</li>
         </ul>
       </div>
     </div>
