add spans into the lists to display the details

--- a/index.html
+++ b/index.html
@@ -28,30 +28,30 @@
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current2">current temp:</li>
-          <li id="max2">max temp:</li>
-          <li id="humidity2">humidity:</li>
+          <li id="current2">current temp:<span></span></li>
+          <li id="max2">max temp:<span></span></li>
+          <li id="humidity2">humidity:<span></span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current3">current temp:</li>
-          <li id="max3">max temp:</li>
-          <li id="humidity3">humidity:</li>
+          <li id="current3">current temp<span></span>:</li>
+          <li id="max3">max temp:<span></span></li>
+          <li id="humidity3">humidity:<span></span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current4">current temp:</li>
-          <li id="max4">max temp:</li>
-          <li id="humidity4">humidity:</li>
+          <li id="current4">current temp:<span></span></li>
+          <li id="max4">max temp:<span></span></li>
+          <li id="humidity4">humidity:<span></span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current5">current temp:</li>
-          <li id="max5">max temp:</li>
-          <li id="humidity5">humidity:</li>
+          <li id="current5">current temp:<span></span></li>
+          <li id="max5">max temp:<span></span></li>
+          <li id="humidity5">humidity:<span></span></li>
         </ul>
       </div>
     </div>
