fix bug in dispay temps

--- a/index.html
+++ b/index.html
@@ -21,37 +21,37 @@
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current1">current temp:</li>
-          <li id="max1">max temp:</li>
-          <li id="humidity1">humidity:</li>
+          <li >current temp:<span id="current1"></span></li>
+          <li >max temp:<span id="max1"></span></li>
+          <li >humidity:<span id="humidity1"></span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current2">current temp:<span></span></li>
-          <li id="max2">max temp:<span></span></li>
-          <li id="humidity2">humidity:<span></span></li>
+          <li >current temp:<span id="current2"></span></li>
+          <li >max temp:<span id="max2"></span></li>
+          <li >humidity:<span id="humidity2"></span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current3">current temp<span></span>:</li>
-          <li id="max3">max temp:<span></span></li>
-          <li id="humidity3">humidity:<span></span></li>
+          <li >current temp<span id="current3"></span>:</li>
+          <li >max temp:<span id="max3"></span></li>
+          <li>humidity:<span  id="humidity3"></span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current4">current temp:<span></span></li>
-          <li id="max4">max temp:<span></span></li>
-          <li id="humidity4">humidity:<span></span></li>
+          <li >current temp:<span id="current4"></span></li>
+          <li >max temp:<span id="max4"></span></li>
+          <li ></li>humidity:<span id="humidity4"></span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li id="current5">current temp:<span></span></li>
-          <li id="max5">max temp:<span></span></li>
-          <li id="humidity5">humidity:<span></span></li>
+          <li >current temp:<span id="current5"></span></li>
+          <li >max temp:<span id="max5"></span></li>
+          <li >humidity:<span id="humidity5"></span></li>
         </ul>
       </div>
     </div>
