--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script src="https://kit.fontawesome.com/313cec68ce.js"></script>
+    <link rel="stylesheet" href="index.css" />
 
     <title>Weather App</title>
   </head>
@@ -21,37 +22,43 @@
       </div>
       <div class="result">
         <ul class="list">
-          <li >current temp:<span id="current1"></span></li>
-          <li >max temp:<span id="max1"></span></li>
-          <li >humidity:<span id="humidity1"></span></li>
+          <li>
+            <i class="fa fa-temperature-high"></i>
+            <span id="current1"></span>
+          </li>
+          <li><i class="fa fa-wind"></i> <span id="wind1"></span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li >current temp:<span id="current2"></span></li>
-          <li >max temp:<span id="max2"></span></li>
-          <li >humidity:<span id="humidity2"></span></li>
+          <li>
+            <i class="fa fa-temperature-high"></i> <span id="current2"></span>
+          </li>
+          <li><i class="fa fa-wind"></i> <span id="wind2"></span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li >current temp<span id="current3"></span>:</li>
-          <li >max temp:<span id="max3"></span></li>
-          <li>humidity:<span  id="humidity3"></span></li>
+          <li>
+            <i class="fa fa-temperature-high"></i> <span id="current3"></span>
+          </li>
+          <li><i class="fa fa-wind"></i> <span id="wind3"></span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li >current temp:<span id="current4"></span></li>
-          <li >max temp:<span id="max4"></span></li>
-          <li ></li>humidity:<span id="humidity4"></span></li>
+          <li>
+            <i class="fa fa-temperature-high"></i> <span id="current4"></span>
+          </li>
+          <li><i class="fa fa-wind"></i><span id="wind4"> </span></li>
         </ul>
       </div>
       <div class="result">
         <ul class="list">
-          <li >current temp:<span id="current5"></span></li>
-          <li >max temp:<span id="max5"></span></li>
-          <li >humidity:<span id="humidity5"></span></li>
+          <li>
+            <i class="fa fa-temperature-high"></i> <span id="current5"></span>
+          </li>
+          <li><i class="fa fa-wind"></i><span id="wind5"> </span></li>
         </ul>
       </div>
     </div>
