add background API

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <input type="text" id="input" autofocus placeholder="Find your city" />
         <button type="submit" id="search"><i class="fa fa-search"></i></button>
       </div>
+
       <div class="result">
         <ul class="list">
           <li>
@@ -27,6 +28,7 @@
             <span id="current1"></span>
           </li>
           <li><i class="fa fa-wind"></i> <span id="wind1"></span></li>
+          <li><img id="icon1" src="" alt="" /></li>
         </ul>
       </div>
       <div class="result">
@@ -35,6 +37,7 @@
             <i class="fa fa-temperature-high"></i> <span id="current2"></span>
           </li>
           <li><i class="fa fa-wind"></i> <span id="wind2"></span></li>
+          <li><img id="icon2" src="" alt="" /></li>
         </ul>
       </div>
       <div class="result">
@@ -43,6 +46,7 @@
             <i class="fa fa-temperature-high"></i> <span id="current3"></span>
           </li>
           <li><i class="fa fa-wind"></i> <span id="wind3"></span></li>
+          <li><img id="icon3" src="" alt="" /></li>
         </ul>
       </div>
       <div class="result">
@@ -51,6 +55,7 @@
             <i class="fa fa-temperature-high"></i> <span id="current4"></span>
           </li>
           <li><i class="fa fa-wind"></i><span id="wind4"> </span></li>
+          <li><img id="icon4" src="" alt="" /></li>
         </ul>
       </div>
       <div class="result">
@@ -59,6 +64,7 @@
             <i class="fa fa-temperature-high"></i> <span id="current5"></span>
           </li>
           <li><i class="fa fa-wind"></i><span id="wind5"> </span></li>
+          <li><img id="icon5" src="" alt="" /></li>
         </ul>
       </div>
     </div>
