--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
@@ -14,13 +19,16 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container">
+    <div class="searchContainer">
       <h1 class="header">Weather Forecast</h1>
       <div id="search">
         <input type="text" id="input" autofocus placeholder="Find your city" />
-        <button type="submit" id="search"><i class="fa fa-search"></i></button>
+        <button type="submit" id="searchicon">
+          <i class="fa fa-search"></i>
+        </button>
       </div>
-
+    </div>
+    <div class="container">
       <div class="result">
         <ul class="list">
           <li>
