add days in preview

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="container">
       <div class="result">
         <ul class="list">
+          <li id="day0"></li>
           <li>
             <i class="fa fa-temperature-high"></i>
             <span id="current1"></span>
@@ -41,6 +42,7 @@
       </div>
       <div class="result">
         <ul class="list">
+          <li id="day1"></li>
           <li>
             <i class="fa fa-temperature-high"></i> <span id="current2"></span>
           </li>
@@ -50,6 +52,7 @@
       </div>
       <div class="result">
         <ul class="list">
+          <li id="day2"></li>
           <li>
             <i class="fa fa-temperature-high"></i> <span id="current3"></span>
           </li>
@@ -59,6 +62,7 @@
       </div>
       <div class="result">
         <ul class="list">
+          <li id="day3"></li>
           <li>
             <i class="fa fa-temperature-high"></i> <span id="current4"></span>
           </li>
@@ -68,6 +72,7 @@
       </div>
       <div class="result">
         <ul class="list">
+          <li id="day4"></li>
           <li>
             <i class="fa fa-temperature-high"></i> <span id="current5"></span>
           </li>
