--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="searchContainer">
       <h1 class="header">Weather Forecast</h1>
       <div id="search">
-        <input type="text" id="input" autofocus placeholder="Find your city" />
+        <input type="text" id="input" autofocus placeholder="Zoek een stad" />
         <button type="submit" id="searchicon">
           <i class="fa fa-search"></i>
         </button>
