make loop so that days get updated

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="result">
         <ul class="list">
-          <li id="day0"></li>
+          <li class="day"></li>
           <li>
             <i class="fa fa-temperature-high"></i>
             <span id="current1"></span>
@@ -47,7 +47,7 @@
       </div>
       <div class="result">
         <ul class="list">
-          <li id="day1"></li>
+          <li class="day"></li>
           <li>
             <i class="fa fa-temperature-high"></i> <span id="current2"></span>
           </li>
@@ -57,7 +57,7 @@
       </div>
       <div class="result">
         <ul class="list">
-          <li id="day2"></li>
+          <li class="day"></li>
           <li>
             <i class="fa fa-temperature-high"></i> <span id="current3"></span>
           </li>
@@ -67,7 +67,7 @@
       </div>
       <div class="result">
         <ul class="list">
-          <li id="day3"></li>
+          <li class="day"></li>
           <li>
             <i class="fa fa-temperature-high"></i> <span id="current4"></span>
           </li>
@@ -77,7 +77,7 @@
       </div>
       <div class="result">
         <ul class="list">
-          <li id="day4"></li>
+          <li class="day"></li>
           <li>
             <i class="fa fa-temperature-high"></i> <span id="current5"></span>
           </li>
