use for loop to set weather icons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span id="current1"></span>
           </li>
           <li><i class="fa fa-wind"></i> <span id="wind1"></span></li>
-          <li><img id="icon1" src="" alt="" /></li>
+          <li><img class="icon" src="" alt="" /></li>
         </ul>
       </div>
       <div class="result">
@@ -52,7 +52,7 @@
             <i class="fa fa-temperature-high"></i> <span id="current2"></span>
           </li>
           <li><i class="fa fa-wind"></i> <span id="wind2"></span></li>
-          <li><img id="icon2" src="" alt="" /></li>
+          <li><img class="icon" src="" alt="" /></li>
         </ul>
       </div>
       <div class="result">
@@ -62,7 +62,7 @@
             <i class="fa fa-temperature-high"></i> <span id="current3"></span>
           </li>
           <li><i class="fa fa-wind"></i> <span id="wind3"></span></li>
-          <li><img id="icon3" src="" alt="" /></li>
+          <li><img class="icon" src="" alt="" /></li>
         </ul>
       </div>
       <div class="result">
@@ -72,7 +72,7 @@
             <i class="fa fa-temperature-high"></i> <span id="current4"></span>
           </li>
           <li><i class="fa fa-wind"></i><span id="wind4"> </span></li>
-          <li><img id="icon4" src="" alt="" /></li>
+          <li><img class="icon" src="" alt="" /></li>
         </ul>
       </div>
       <div class="result">
@@ -82,7 +82,7 @@
             <i class="fa fa-temperature-high"></i> <span id="current5"></span>
           </li>
           <li><i class="fa fa-wind"></i><span id="wind5"> </span></li>
-          <li><img id="icon5" src="" alt="" /></li>
+          <li><img class="icon" src="" alt="" /></li>
         </ul>
       </div>
     </div>
