change "current" ID's in classes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li class="day"></li>
           <li>
             <i class="fa fa-temperature-high"></i>
-            <span id="current1"></span>
+            <span class="current"></span>
           </li>
           <li><i class="fa fa-wind"></i> <span id="wind1"></span></li>
           <li><img class="icon" src="" alt="" /></li>
@@ -49,7 +49,7 @@
         <ul class="list">
           <li class="day"></li>
           <li>
-            <i class="fa fa-temperature-high"></i> <span id="current2"></span>
+            <i class="fa fa-temperature-high"></i> <span class="current"></span>
           </li>
           <li><i class="fa fa-wind"></i> <span id="wind2"></span></li>
           <li><img class="icon" src="" alt="" /></li>
@@ -59,7 +59,7 @@
         <ul class="list">
           <li class="day"></li>
           <li>
-            <i class="fa fa-temperature-high"></i> <span id="current3"></span>
+            <i class="fa fa-temperature-high"></i> <span class="current"></span>
           </li>
           <li><i class="fa fa-wind"></i> <span id="wind3"></span></li>
           <li><img class="icon" src="" alt="" /></li>
@@ -69,7 +69,7 @@
         <ul class="list">
           <li class="day"></li>
           <li>
-            <i class="fa fa-temperature-high"></i> <span id="current4"></span>
+            <i class="fa fa-temperature-high"></i> <span class="current"></span>
           </li>
           <li><i class="fa fa-wind"></i><span id="wind4"> </span></li>
           <li><img class="icon" src="" alt="" /></li>
@@ -79,7 +79,7 @@
         <ul class="list">
           <li class="day"></li>
           <li>
-            <i class="fa fa-temperature-high"></i> <span id="current5"></span>
+            <i class="fa fa-temperature-high"></i> <span class="current"></span>
           </li>
           <li><i class="fa fa-wind"></i><span id="wind5"> </span></li>
           <li><img class="icon" src="" alt="" /></li>
