use for loop to to change wind speeds

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <i class="fa fa-temperature-high"></i>
             <span class="current"></span>
           </li>
-          <li><i class="fa fa-wind"></i> <span id="wind1"></span></li>
+          <li><i class="fa fa-wind"></i> <span class="wind"></span></li>
           <li><img class="icon" src="" alt="" /></li>
         </ul>
       </div>
@@ -51,7 +51,7 @@
           <li>
             <i class="fa fa-temperature-high"></i> <span class="current"></span>
           </li>
-          <li><i class="fa fa-wind"></i> <span id="wind2"></span></li>
+          <li><i class="fa fa-wind"></i> <span class="wind"></span></li>
           <li><img class="icon" src="" alt="" /></li>
         </ul>
       </div>
@@ -61,7 +61,7 @@
           <li>
             <i class="fa fa-temperature-high"></i> <span class="current"></span>
           </li>
-          <li><i class="fa fa-wind"></i> <span id="wind3"></span></li>
+          <li><i class="fa fa-wind"></i> <span class="wind"></span></li>
           <li><img class="icon" src="" alt="" /></li>
         </ul>
       </div>
@@ -71,7 +71,7 @@
           <li>
             <i class="fa fa-temperature-high"></i> <span class="current"></span>
           </li>
-          <li><i class="fa fa-wind"></i><span id="wind4"> </span></li>
+          <li><i class="fa fa-wind"></i><span class="wind"> </span></li>
           <li><img class="icon" src="" alt="" /></li>
         </ul>
       </div>
@@ -81,7 +81,7 @@
           <li>
             <i class="fa fa-temperature-high"></i> <span class="current"></span>
           </li>
-          <li><i class="fa fa-wind"></i><span id="wind5"> </span></li>
+          <li><i class="fa fa-wind"></i><span class="wind"> </span></li>
           <li><img class="icon" src="" alt="" /></li>
         </ul>
       </div>
