--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           autofocus
           placeholder="Zoek een grootstad"
         />
-        
+        <button type="submit" id="button">
+          <i class="fa fa-search" ></i>
+        </button>
       </div>
     </div>
     <div class="container">
