delete search button in HTML

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           autofocus
           placeholder="Zoek een grootstad"
         />
-        <button type="submit" id="button">
+        <!-- <button type="submit" id="button">
           <i class="fa fa-search" ></i>
-        </button>
+        </button> -->
       </div>
     </div>
     <div class="container">
